--- a/index.html
+++ b/index.html
@@ -55,30 +55,7 @@
                     padding: 10px;
                     background-color: #e0e0e0;
                     border-left: 4px solid #4CAF50;
-                }
-            </style>
-        </head>
-        <body>
-            <div class="container">
-                <h1>Kim의 소개 페이지</h1>
-                <p><strong>이름:</strong> Kim</p>
-                <p><strong>나이:</strong> 33</p>
-                <p><strong>학위:</strong> Master's degree</p>
-                <p><strong>주소:</strong> 부산시 해운대구</p>
-                <p><strong>좋아하는 것:</strong> 강아지</p>
-                <p><strong>취미:</strong></p>
-                <ul class="hobby-list">
-                    <li>독서</li>
-                    <li>등산</li>
-                </ul>
-                <p><strong>주요 기술:</strong></p>
-                <ul class="skill-list">
-                    <li>Python</li>
-                    <li>C#</li>
-                    <li>OpenCV</li>
-                </ul>
-                <div class="intro">
-                    <p>안녕하세요! 저는 Kim입니다. 저는 부산시 해운대구에 살고 있으며, Master's degree를 소지하고 있습니다. Python, C#, OpenCV와 같은 기술을 주로 사용하며, 강아지를 아주 좋아합니다. 취미로는 독서와 등산을 즐기고 있습니다. 저의 웹사이트에 방문해 주셔서 감사합니다!</p>
+            산에 살고 있으며, Master's degree를 소지하고 있습니다. Python, C#, OpenCV와 같은 기술을 주로 사용하며, 강아지를 아주 좋아합니다. 취미로는 독서와 등산을 즐기고 있습니다. 저의 웹사이트에 방문해 주셔서 감사합니다!</p>
                 </div>
             </div>
         </body>
